--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,7 @@
 {
   "dependencies": {
-    "com.unity.ads": "exclude",
-    "com.unity.analytics": "exclude",
     "com.unity.package-manager-ui": "1.9.11",
-    "com.unity.purchasing": "exclude",
+    "com.unity.textmeshpro": "1.2.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
@@ -33,7 +31,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.standardevents": "exclude"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
